# rules_postgres

./: .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  MODULE.bazel
.github/workflows/: ci.yml
docs/: defs.md  extensions.md
examples/meson_smoke/: BUILD.bazel
lean/: BUILD.bazel  pg_ast_smoke.bzl
lean/Pg/: Ast.lean  AstBeginExceptionTest.lean  AstCaseStmtTest.lean  AstDeclareBlockTest.lean  AstDeclareLocalTest.lean  AstExecuteFormatTest.lean  AstForRecordInLoopTest.lean  AstIfElseIfTest.lean  AstInsertDeleteTest.lean  AstPerformTest.lean  AstRaiseNoticeTest.lean  AstReturnQuerySelectTest.lean  AstSelectIntoTest.lean  AstSmart.lean  AstTriggerDExtTest.lean  AstUpdateReturnExprTest.lean  Pretty.lean  ProceduralSurface.lean  Schema.lean  Smoke.lean  Spec.lean  TyExtTest.lean  Typing.lean
lean/Pg/Catalog/: Dat.lean  DatRoundTrip.lean  Fold.lean  FoldDiffTest.lean  FoldPipelineTest.lean  FoldTest.lean  Tables.lean
lean/Pg/Catalog/dat/: _round_trip_expected.txt  _round_trip_expected.txt.bak
lean/Pg/Ir/Emit/: FloatToInt.lean  TidC.lean
lean/Pg/Plpgsql/: JsonReader.lean  JsonReaderTest.lean
lean/Pg/Query/: Generated.lean  GeneratedTest.lean  Top.lean
lora/: BUILD.bazel
postgres/: extensions.bzl  meson.bzl  sql_toolchain.bzl
postgres/private/: BUILD.bazel
release/: BUILD.bazel
rust/: BUILD.bazel
rust/c_oracle/: float_to_int.c  uuid.c
rust/libpq_buf/: BUILD.bazel
rust/pg_bytea/: BUILD.bazel
rust/pg_cash_arith/: BUILD.bazel
rust/pg_date_arith/: BUILD.bazel
rust/pg_fcinfo/: BUILD.bazel
rust/pg_float_arith/: BUILD.bazel
rust/pg_float_to_int/: BUILD.bazel
rust/pg_float_unary/: BUILD.bazel
rust/pg_int4_arith/: BUILD.bazel
rust/pg_int4_bitwise/: BUILD.bazel
rust/pg_int4_cmp/: BUILD.bazel
rust/pg_int4_div/: BUILD.bazel
rust/pg_int4_hash/: BUILD.bazel
rust/pg_int4_unary/: BUILD.bazel
rust/pg_int_casts/: BUILD.bazel
rust/pg_interval/: BUILD.bazel
rust/pg_macaddr/: BUILD.bazel
rust/pg_palloc/: BUILD.bazel
rust/pg_text/: BUILD.bazel
rust/pg_tid/: BUILD.bazel
rust/pg_tid/c_oracle/: tid_emit.c
rust/pg_timestamp_arith/: BUILD.bazel
rust/pg_uuid/: BUILD.bazel
rust/pg_uuid/c_oracle/: uuid.c
rust/sha2/: BUILD.bazel
tools/catalog_gen/: README.md
tools/corpus_extract/: BUILD.bazel  README.md  corpus.jsonl  extract.py  sft_messages_v1.jsonl  to_messages_v1.py  train_c_to_lean.jsonl  train_lean_to_c.jsonl  train_lean_to_rust.jsonl  training_pairs.py
tools/credhelper/: gh-cred-helper.sh
tools/lake/: BUILD.bazel  lake-manifest.json  lakefile.lean
tools/pgpb_codegen/: BUILD.bazel  drift_test.sh  pgpb_codegen.py
tools/pgpb_to_lean_ast/: BUILD.bazel  pgpb_to_lean_ast.c  smoke_fixture.sql
tools/pgpb_to_snapshot/: pgpb_to_snapshot.c
tools/regen/: BUILD.bazel  check-all.sh  cluster.bzl  clusters.bzl  gate1.bzl  lean_emits.bzl  refresh.py
tools/stream_a/: BUILD.bazel  PROMPT_TEMPLATE.md  author.py
tools/stream_a/pilots/: _template.toml  int_div.toml
