module(
    name = "rules_postgres",
    version = "0.7.0",
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.0.17")

# Shared GitHub-release fetching infrastructure (used by
# postgres/extensions.bzl to pull libpg_query archive tags).
bazel_dep(name = "rules_github", version = "0.1.1")

# Non-dev: postgres/defs.bzl's `pg_parse_valid_test` loads `@rules_shell`
# at consumer-side load time, so consumers must be able to resolve it.
bazel_dep(name = "rules_shell", version = "0.4.1")

# Hermetic meson + ninja toolchain for `pg_meson_configure` (see
# postgres/meson.bzl). The general-purpose machinery lives in
# rules_meson; rules_postgres consumes its `meson_configure` rule and
# wraps it with PG-specific option defaults + the pg_config.h overlay
# pre-removal list.
bazel_dep(name = "rules_meson", version = "0.0.0")

# Lean toolchain. Used by `lean/Pg/*` — the typed PG AST + emit
# infrastructure that lands here under the PgAst extraction (see
# ~/Documents/rfcs/narrative/pgast-extraction-{proposal,review,
# response,phase1-plan,phase1-ack}.md for the full decision trail).
# Phase 1 (PgTy + PgAst + PgPretty + Catalog/* + tools/catalog_gen/)
# moves on or after 2026-06-01; the scaffolding here lands first as
# empty stubs + a smoke test so the receiving wiring is proven before
# any content arrives.
bazel_dep(name = "rules_lean", version = "0.5.1")

# Minimal Lake workspace pinning the Lean toolchain. Dep-free: Phase 1
# modules (PgTy + PgAst + PgPretty + Catalog/*) import only Lean core, and
# rules_lean >= 0.5.1 accepts a zero-package workspace (the lake_workspace
# dep-free path), so the old nominal `require batteries` is gone — it was
# never imported, and source-building it cost ~15 min on every CI run that
# pulled rules_postgres in. Add real requires here + in tools/lake/lakefile.lean
# when later phases pull in mathlib/cslib.
# Toolchain version must match Aion's tools/lake/lean-toolchain.
lake = use_extension("@rules_lean//lean:lake.bzl", "lake")
lake.workspace(
    name = "rules_postgres_lake",
    lake_manifest = "//tools/lake:lake-manifest.json",
    lakefile = "//tools/lake:lakefile.lean",
    lean_toolchain = "//tools/lake:lean-toolchain",
)
use_repo(lake, "rules_postgres_lake")

register_toolchains("@rules_postgres_lake//:lean_toolchain_def")

# rules_lang — the `c_ast_struct_diff_test` rule that backs Gate 3 (clang
# AST structural diff vs real Postgres source). Resolved via the premium
# private registry (see .bazelrc).
bazel_dep(name = "rules_lang", version = "0.0.8")

# polyglot_ast — the shared Lean kernel; `Polyglot.Sql.Ast` (the generic SQL
# atlas) moved here from rules_lang. Pg.Ast's Pattern-A `Ext` slot consumes
# it cross-repo (see //lean:BUILD.bazel). Premium private registry.
bazel_dep(name = "polyglot_ast", version = "0.0.6")

# rules_lora — Bazel-native LoRA fine-tuning. Used by Pg.Ir's
# local-model fine-tune track: the Stream A LLM-authoring loop's
# corpus (17 clusters × 230 fns at tools/corpus_extract/) feeds
# directly into rules_lora's `messages_v1` SFT schema. The goal is
# a small local model that authors Pg.Ir Lean specs, removing the
# hosted-LLM dependency.
bazel_dep(name = "rules_lora", version = "0.0.1")

# Dev-only: only loaded by docs/BUILD.bazel.
bazel_dep(name = "stardoc", version = "0.7.2", dev_dependency = True)

# Dev-only: rules_rust drives Gate 2 (cluster behavioral diff-test) —
# every cluster registers a rust_library + cc_library under //rust:
# (c_oracle) + rust_test pair. Consumers of rules_postgres don't run
# these tests, so the whole rules_rust surface is gated dev-only.
bazel_dep(name = "rules_rust", version = "0.70.0", dev_dependency = True)

rust = use_extension(
    "@rules_rust//rust:extensions.bzl",
    "rust",
    dev_dependency = True,
)
rust.toolchain(
    edition = "2021",
    versions = ["1.95.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains(
    "@rust_toolchains//:all",
    dev_dependency = True,
)

# crate_universe: provides proptest (and any future test-only deps).
# isolate=True so our @crates universe doesn't collide with sibling
# repos that also register a `crates` extension.
crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
    dev_dependency = True,
    isolate = True,
)
crate.spec(
    package = "proptest",
    version = "1",
)

# bumpalo: arena allocator backing pg_palloc's MemoryContext adapter.
crate.spec(
    package = "bumpalo",
    version = "3",
)

# libc: pg_macaddr / pg_tid / pg_uuid src/lib.rs call libc::memcmp etc.
crate.spec(
    package = "libc",
    version = "0.2",
)
crate.from_specs(name = "crates")
use_repo(crate, "crates")

# libpg_query backs the user-facing `pg_parse_valid_test` macro + the
# public `parse_check` / `plpgsql_to_json` binaries under //tools, so it
# must resolve for downstream consumers — keep it non-dev. The full
# Postgres source tree is only needed by the pg_meson_configure example
# under examples/meson_smoke, so it stays dev-only.
pg = use_extension("//postgres:extensions.bzl", "pg")
pg.query(version = "17-6.2.2")
use_repo(pg, "libpg_query")

pg_dev = use_extension("//postgres:extensions.bzl", "pg", dev_dependency = True)
pg_dev.source(version = "17.6")
use_repo(pg_dev, "postgres_src")
