load("@rules_lean//lean:lean.bzl", "lean_main_test", "lean_test")
load("//tools/regen:clusters.bzl", "CLUSTERS")
load("//tools/regen:gate1.bzl", "wire_all_gate1")

# Expose all Pg.* Lean source files publicly so cross-repo
# consumers (e.g. Aion's lean_test targets) can list them in
# their own `srcs` for shim-style migrations. rules_lean's
# lean_test rule doesn't expose a LeanInfo provider for
# downstream `deps` consumption, so cross-repo Lean source
# sharing happens at the source-file level via `srcs`.
exports_files(
    glob(["Pg/**/*.lean"]),
    visibility = ["//visibility:public"],
)

# ─── Gate 1 — regen idempotence (Bazel-native) ─────────────────────
#
# Reads the full cluster list from `tools/regen/clusters.bzl` and
# wires one `gate1_cluster(...)` per spec — generating `<base>_rs_emit`
# (and `<base>_c_emit` for clusters with a real-PG-headers C variant)
# plus their accompanying `diff_test`s. Aggregated via
# `//tools/regen:gate1_all`.

wire_all_gate1(CLUSTERS)

# ─── Catalog gen: .dat round-trip across the FULL bootstrap catalog ─
#
# For each of PG 17.6's 24 `.dat` system-catalog seed files (vendored
# under `Pg/Catalog/dat/`), `Pg.Catalog.Dat.parseFile` parses + the
# canonical `emitFile` re-emits + `parseFile` re-parses; the entry
# prints one `ok: <name> (<N> rows)` line per file and a summary.
# `diff_test` against the committed expected catches any drift between
# the parser and the upstream format.
#
# Coverage: 6,777 rows total (pg_namespace 3 → pg_proc 3,314).
# A passing test certifies the Lean grammar captures every value
# shape PG's vendored `.dat` files use — quoted strings with `\\` and
# `\'` escapes, bare-identifier values, brace-containing strings
# (pg_aggregate's `'{0,0}'`), multi-line records, the lot.
#
# `DatRoundTrip.lean`'s `main : IO UInt32` self-validates: prints
# `ok: <file> ...` per file and returns 0 only when all 24 round-trip
# stable. `lean_main_test` (rules_lean 0.3.5) passes the test iff that
# exit code is 0 — no committed expected.txt fixture needed.
lean_main_test(
    name = "gate_catalog_dat_round_trip",
    srcs = [
        "Pg/Catalog/Dat.lean",
        "Pg/Catalog/DatRoundTrip.lean",
    ],
    # .dat files pulled directly from the pinned @postgres_src checkout
    # (no vendoring). rules_lean 0.3.4's lean_emit.data stages external-
    # repo files at their workspace-relative path, so each lands at
    # $WORK/src/include/catalog/<name>.dat — matching the path the
    # entry uses for `IO.FS.readFile`.
    data = [
        "@postgres_src//:src/include/catalog/pg_aggregate.dat",
        "@postgres_src//:src/include/catalog/pg_am.dat",
        "@postgres_src//:src/include/catalog/pg_amop.dat",
        "@postgres_src//:src/include/catalog/pg_amproc.dat",
        "@postgres_src//:src/include/catalog/pg_authid.dat",
        "@postgres_src//:src/include/catalog/pg_cast.dat",
        "@postgres_src//:src/include/catalog/pg_class.dat",
        "@postgres_src//:src/include/catalog/pg_collation.dat",
        "@postgres_src//:src/include/catalog/pg_conversion.dat",
        "@postgres_src//:src/include/catalog/pg_database.dat",
        "@postgres_src//:src/include/catalog/pg_language.dat",
        "@postgres_src//:src/include/catalog/pg_namespace.dat",
        "@postgres_src//:src/include/catalog/pg_opclass.dat",
        "@postgres_src//:src/include/catalog/pg_operator.dat",
        "@postgres_src//:src/include/catalog/pg_opfamily.dat",
        "@postgres_src//:src/include/catalog/pg_proc.dat",
        "@postgres_src//:src/include/catalog/pg_range.dat",
        "@postgres_src//:src/include/catalog/pg_tablespace.dat",
        "@postgres_src//:src/include/catalog/pg_ts_config.dat",
        "@postgres_src//:src/include/catalog/pg_ts_config_map.dat",
        "@postgres_src//:src/include/catalog/pg_ts_dict.dat",
        "@postgres_src//:src/include/catalog/pg_ts_parser.dat",
        "@postgres_src//:src/include/catalog/pg_ts_template.dat",
        "@postgres_src//:src/include/catalog/pg_type.dat",
    ],
    entry = "Pg/Catalog/DatRoundTrip.lean",
    # Lean compile + run of all 24 .dat files (6,777 rows; pg_proc
    # alone is 3,314) exceeds the default 300s test timeout. Under
    # `lean_regen_test` the slow lean_emit ran as a build action
    # (no timeout) and only the diff_test was a test; lean_main_test
    # runs the whole thing in-test, so we need the larger budget.
    timeout = "long",
)

# Receiving scaffolding for the PgAst extraction (Phase 1).
#
# Currently: empty stub Lean modules at `Pg/*` + `Pg/Catalog/*`.
# Phase 1 of the extraction (Aion-side drives, target start
# 2026-06-01) overwrites the stubs with the moved content from
# `lean/Aion/Db/PgTy.lean`, `PgAst.lean`, `PgPretty.lean`,
# `PgRegexAst.lean`, `Catalog.lean` (umbrella), and `Catalog/*`.
#
# Full decision trail (8 docs):
#   ~/Documents/rfcs/narrative/pgast-extraction-proposal.md
#   ~/Documents/rfcs/narrative/pgast-extraction-review.md
#   ~/Documents/rfcs/narrative/pgast-extraction-response.md
#   ~/Documents/rfcs/narrative/pgast-extraction-phase1-plan.md
#   ~/Documents/rfcs/narrative/pgast-extraction-phase1-ack.md
#   ~/Documents/rfcs/narrative/pgast-extraction-scaffold-landed.md
#   ~/Documents/rfcs/narrative/pgast-extraction-scaffold-landed-ack.md
#   ~/Documents/rfcs/narrative/pgast-extraction-pre-phase1-followup.md
#
# Note: Pg/RegexAst.lean + Pg/Catalog.lean added 2026-05-25 by the
# Aion-side agent per the pre-Phase-1 dep audit (commit `c4e49f1`
# Aion-side; see pre-phase1-followup.md). PgRegexAst is a hard dep
# of Pg.Ast via `Expr.regexMatch`, so it must land in Phase 1
# (not Phase 4 as originally scoped). Pg/Catalog.lean is the
# umbrella re-exporter; Aion's current umbrella is missing
# `AttributeRef` + `Generated` imports — Phase 1 PR completes them.
#
# This `:smoke_test` proves the build wiring on empty stubs: it
# imports every scaffolded module and asserts they type-check
# together. Stays in place after Phase 1 as a structural
# regression-gate on the receiving-side imports.
lean_test(
    name = "smoke_test",
    srcs = [
        # Dependency-ordered: lean_test compiles srcs in list order.
        "@rules_lang//lean:Polyglot/Sql/Ast.lean",
        "Pg/Ty.lean",
        "Pg/RegexAst.lean",
        "Pg/Catalog/Oid.lean",
        "Pg/Catalog/Tables.lean",
        "Pg/Catalog/RegTypes.lean",
        "Pg/Catalog/Snapshot.lean",
        "Pg/Catalog/Resolution.lean",
        "Pg/Catalog/AttributeRef.lean",
        "Pg/Catalog/Generated.lean",
        "Pg/Catalog.lean",
        "Pg/Ast.lean",
        "Pg/Stmt.lean",
        "Pg/Pretty.lean",
        "Pg/Smoke.lean",
    ],
    entry = "Pg/Smoke.lean",
    visibility = ["//visibility:public"],
)

# Smoke test that exercises cross-repo wiring with rules_lang's
# `Polyglot.Sql.Ast` (the generic SQL atlas). Pg/Ast.lean's factor
# step (Phase 1b) will `import Polyglot.Sql.Ast` and define
# `Pg.Ast.ExprExt` extending it; this smoke test proves the import
# path resolves before the heavy factor work proceeds.
#
# Sources include the rules_lang-side file via `@rules_lang//lean:...`
# (which works under bzlmod local_path_override + the rules_lean
# cross-repo `_module_path` patch). The package check sees
# `lean/Polyglot/Sql/Ast.lean` after the `../rules_lang+/` prefix
# strip — same package as the rules_postgres-side files, so the
# stage layout works.
lean_test(
    name = "polyglot_sql_smoke_test",
    srcs = [
        "@rules_lang//lean:Polyglot/Sql/Ast.lean",
        "Polyglot/SqlSmoke.lean",
    ],
    entry = "Polyglot/SqlSmoke.lean",
    visibility = ["//visibility:public"],
)
