load("@rules_lean//lean:lean.bzl", "lean_main_test", "lean_test")
load("//lean:pg_ast_smoke.bzl", "pg_ast_smoke_test")
load("//tools/regen:clusters.bzl", "CLUSTERS")
load("//tools/regen:lean_emits.bzl", "wire_all_lean_emits")

# Expose all Pg.* Lean source files publicly so cross-repo
# consumers (e.g. Aion's lean_test targets) can list them in
# their own `srcs` for shim-style migrations. rules_lean's
# lean_test rule doesn't expose a LeanInfo provider for
# downstream `deps` consumption, so cross-repo Lean source
# sharing happens at the source-file level via `srcs`.
exports_files(
    glob(["Pg/**/*.lean"]),
    visibility = ["//visibility:public"],
)

# ─── Lean → Rust/C emits (live source of truth at build time) ──────
#
# One `lean_emit` per cluster, producing `<base>_rs_emit.rs` (and
# `<base>_c_emit.c` for clusters with a real-PG-headers C variant).
# These outputs are consumed directly by `//rust:<crate>` and Gate 3's
# `c_ast_dump_single` — no committed `src/lib.rs` / `c_oracle/<base>_emit.c`
# exist anymore. Lean is THE source; the old Gate 1 (regen idempotence
# against committed artifacts) becomes tautological and was removed.

wire_all_lean_emits(CLUSTERS)

# ─── Catalog gen: .dat round-trip across the FULL bootstrap catalog ─
#
# For each of PG 17.6's 24 `.dat` system-catalog seed files (vendored
# under `Pg/Catalog/dat/`), `Pg.Catalog.Dat.parseFile` parses + the
# canonical `emitFile` re-emits + `parseFile` re-parses; the entry
# prints one `ok: <name> (<N> rows)` line per file and a summary.
# `diff_test` against the committed expected catches any drift between
# the parser and the upstream format.
#
# Coverage: 6,777 rows total (pg_namespace 3 → pg_proc 3,314).
# A passing test certifies the Lean grammar captures every value
# shape PG's vendored `.dat` files use — quoted strings with `\\` and
# `\'` escapes, bare-identifier values, brace-containing strings
# (pg_aggregate's `'{0,0}'`), multi-line records, the lot.
#
# `DatRoundTrip.lean`'s `main : IO UInt32` self-validates: prints
# `ok: <file> ...` per file and returns 0 only when all 24 round-trip
# stable. `lean_main_test` (rules_lean 0.3.5) passes the test iff that
# exit code is 0 — no committed expected.txt fixture needed.
lean_main_test(
    name = "gate_catalog_dat_round_trip",
    # Lean compile + run of all 24 .dat files (6,777 rows; pg_proc
    # alone is 3,314) exceeds the default 300s test timeout. Under
    # `lean_regen_test` the slow lean_emit ran as a build action
    # (no timeout) and only the diff_test was a test; lean_main_test
    # runs the whole thing in-test, so we need the larger budget.
    timeout = "long",
    srcs = [
        "Pg/Catalog/Dat.lean",
        "Pg/Catalog/DatRoundTrip.lean",
    ],
    # .dat files pulled directly from the pinned @postgres_src checkout
    # (no vendoring). rules_lean 0.3.4's lean_emit.data stages external-
    # repo files at their workspace-relative path, so each lands at
    # $WORK/src/include/catalog/<name>.dat — matching the path the
    # entry uses for `IO.FS.readFile`.
    data = [
        "@postgres_src//:src/include/catalog/pg_aggregate.dat",
        "@postgres_src//:src/include/catalog/pg_am.dat",
        "@postgres_src//:src/include/catalog/pg_amop.dat",
        "@postgres_src//:src/include/catalog/pg_amproc.dat",
        "@postgres_src//:src/include/catalog/pg_authid.dat",
        "@postgres_src//:src/include/catalog/pg_cast.dat",
        "@postgres_src//:src/include/catalog/pg_class.dat",
        "@postgres_src//:src/include/catalog/pg_collation.dat",
        "@postgres_src//:src/include/catalog/pg_conversion.dat",
        "@postgres_src//:src/include/catalog/pg_database.dat",
        "@postgres_src//:src/include/catalog/pg_language.dat",
        "@postgres_src//:src/include/catalog/pg_namespace.dat",
        "@postgres_src//:src/include/catalog/pg_opclass.dat",
        "@postgres_src//:src/include/catalog/pg_operator.dat",
        "@postgres_src//:src/include/catalog/pg_opfamily.dat",
        "@postgres_src//:src/include/catalog/pg_proc.dat",
        "@postgres_src//:src/include/catalog/pg_range.dat",
        "@postgres_src//:src/include/catalog/pg_tablespace.dat",
        "@postgres_src//:src/include/catalog/pg_ts_config.dat",
        "@postgres_src//:src/include/catalog/pg_ts_config_map.dat",
        "@postgres_src//:src/include/catalog/pg_ts_dict.dat",
        "@postgres_src//:src/include/catalog/pg_ts_parser.dat",
        "@postgres_src//:src/include/catalog/pg_ts_template.dat",
        "@postgres_src//:src/include/catalog/pg_type.dat",
    ],
    entry = "Pg/Catalog/DatRoundTrip.lean",
)

# Receiving scaffolding for the PgAst extraction (Phase 1).
#
# Currently: empty stub Lean modules at `Pg/*` + `Pg/Catalog/*`.
# Phase 1 of the extraction (Aion-side drives, target start
# 2026-06-01) overwrites the stubs with the moved content from
# `lean/Aion/Db/PgTy.lean`, `PgAst.lean`, `PgPretty.lean`,
# `PgRegexAst.lean`, `Catalog.lean` (umbrella), and `Catalog/*`.
#
# Full decision trail (8 docs):
#   ~/Documents/rfcs/narrative/pgast-extraction-proposal.md
#   ~/Documents/rfcs/narrative/pgast-extraction-review.md
#   ~/Documents/rfcs/narrative/pgast-extraction-response.md
#   ~/Documents/rfcs/narrative/pgast-extraction-phase1-plan.md
#   ~/Documents/rfcs/narrative/pgast-extraction-phase1-ack.md
#   ~/Documents/rfcs/narrative/pgast-extraction-scaffold-landed.md
#   ~/Documents/rfcs/narrative/pgast-extraction-scaffold-landed-ack.md
#   ~/Documents/rfcs/narrative/pgast-extraction-pre-phase1-followup.md
#
# Note: Pg/RegexAst.lean + Pg/Catalog.lean added 2026-05-25 by the
# Aion-side agent per the pre-Phase-1 dep audit (commit `c4e49f1`
# Aion-side; see pre-phase1-followup.md). PgRegexAst is a hard dep
# of Pg.Ast via `Expr.regexMatch`, so it must land in Phase 1
# (not Phase 4 as originally scoped). Pg/Catalog.lean is the
# umbrella re-exporter; Aion's current umbrella is missing
# `AttributeRef` + `Generated` imports — Phase 1 PR completes them.
#
# This `:smoke_test` proves the build wiring on empty stubs: it
# imports every scaffolded module and asserts they type-check
# together. Stays in place after Phase 1 as a structural
# regression-gate on the receiving-side imports.
lean_test(
    name = "smoke_test",
    srcs = [
        # Dependency-ordered: lean_test compiles srcs in list order.
        "@polyglot_ast//lean:Polyglot/Sql/Ast.lean",
        "Pg/Ty.lean",
        "Pg/RegexAst.lean",
        "Pg/Catalog/Oid.lean",
        "Pg/Catalog/Tables.lean",
        "Pg/Catalog/RegTypes.lean",
        "Pg/Catalog/Snapshot.lean",
        "Pg/Catalog/Resolution.lean",
        "Pg/Catalog/AttributeRef.lean",
        "Pg/Catalog/Generated.lean",
        "Pg/Catalog.lean",
        "Pg/Ast.lean",
        "Pg/Spec.lean",
        "Pg/Stmt.lean",
        "Pg/AstSmart.lean",
        "Pg/Pretty.lean",
        "Pg/Smoke.lean",
    ],
    entry = "Pg/Smoke.lean",
    visibility = ["//visibility:public"],
)

# Smoke test that exercises cross-repo wiring with the polyglot_ast
# kernel's `Polyglot.Sql.Ast` (the generic SQL atlas). Pg/Ast.lean's factor
# step (Phase 1b) will `import Polyglot.Sql.Ast` and define
# `Pg.Ast.ExprExt` extending it; this smoke test proves the import
# path resolves before the heavy factor work proceeds.
#
# Sources include the kernel-side file via `@polyglot_ast//lean:...`
# (which works under the rules_lean cross-repo `_module_path` patch). The
# package check sees `lean/Polyglot/Sql/Ast.lean` after the
# `../polyglot_ast+/` prefix strip — same package as the rules_postgres-side
# files, so the stage layout works.
lean_test(
    name = "polyglot_sql_smoke_test",
    srcs = [
        "Polyglot/SqlSmoke.lean",
        "@polyglot_ast//lean:Polyglot/Sql/Ast.lean",
    ],
    entry = "Polyglot/SqlSmoke.lean",
    visibility = ["//visibility:public"],
)

# ─── Pg AST per-constructor smoke tests ────────────────────────────
#
# Adopted from Aion's `lean/Aion/Db/PgAst*Test.lean` (Phase C of the
# Common-Pg consolidation). Each test pins the SQL printer surface +
# Tightening-E surface-lock for one BodyStmt constructor (or family).

pg_ast_smoke_test(
    name = "pg_ast_begin_exception_test",
    entry = "Pg/AstBeginExceptionTest.lean",
)

pg_ast_smoke_test(
    name = "pg_ast_case_stmt_test",
    entry = "Pg/AstCaseStmtTest.lean",
)

pg_ast_smoke_test(
    name = "pg_ast_declare_block_test",
    entry = "Pg/AstDeclareBlockTest.lean",
)

pg_ast_smoke_test(
    name = "pg_ast_declare_local_test",
    entry = "Pg/AstDeclareLocalTest.lean",
)

pg_ast_smoke_test(
    name = "pg_ast_execute_format_test",
    entry = "Pg/AstExecuteFormatTest.lean",
)

pg_ast_smoke_test(
    name = "pg_ast_for_record_in_loop_test",
    entry = "Pg/AstForRecordInLoopTest.lean",
)

pg_ast_smoke_test(
    name = "pg_ast_if_else_if_test",
    entry = "Pg/AstIfElseIfTest.lean",
)

pg_ast_smoke_test(
    name = "pg_ast_insert_delete_test",
    entry = "Pg/AstInsertDeleteTest.lean",
)

pg_ast_smoke_test(
    name = "pg_ast_perform_test",
    entry = "Pg/AstPerformTest.lean",
)

pg_ast_smoke_test(
    name = "pg_ast_raise_notice_test",
    entry = "Pg/AstRaiseNoticeTest.lean",
)

pg_ast_smoke_test(
    name = "pg_ast_return_query_select_test",
    entry = "Pg/AstReturnQuerySelectTest.lean",
)

pg_ast_smoke_test(
    name = "pg_ast_select_into_test",
    entry = "Pg/AstSelectIntoTest.lean",
)

pg_ast_smoke_test(
    name = "pg_ast_trigger_d_ext_test",
    entry = "Pg/AstTriggerDExtTest.lean",
)

pg_ast_smoke_test(
    name = "pg_ast_update_return_expr_test",
    entry = "Pg/AstUpdateReturnExprTest.lean",
)

# Pg.Ty extension-arm pinning tests (PgType constructors).
lean_test(
    name = "pg_ty_ext_test",
    srcs = [
        "Pg/Ty.lean",
        "Pg/TyExtTest.lean",
    ],
    entry = "Pg/TyExtTest.lean",
    visibility = ["//visibility:public"],
)

# Plpgsql JSON-reader pinning test.
lean_test(
    name = "plpgsql_json_reader_test",
    srcs = [
        "Pg/Ast.lean",
        "Pg/AstSmart.lean",
        "Pg/Catalog/Oid.lean",
        "Pg/Catalog/RegTypes.lean",
        "Pg/Catalog/Tables.lean",
        "Pg/Plpgsql/JsonReader.lean",
        "Pg/Plpgsql/JsonReaderTest.lean",
        "Pg/RegexAst.lean",
        "Pg/Spec.lean",
        "Pg/Stmt.lean",
        "Pg/Ty.lean",
        "@polyglot_ast//lean:Polyglot/Sql/Ast.lean",
    ],
    entry = "Pg/Plpgsql/JsonReaderTest.lean",
    visibility = ["//visibility:public"],
)

# Pg.Query.Generated typecheck — the DDL-slice stubbed surface
# from `@rules_postgres//tools:pgpb_codegen`. GeneratedTest.lean
# constructs three sample `ParseResult` values (empty, single,
# mixed) of the exact same shape that
# `@rules_postgres//tools:pgpb_to_lean_ast` produces from a
# `.pgpb` byte payload. If this passes, any decoder output
# also passes — the test gates the decoder + generator agreeing
# on encoding (kernel-checked).
lean_test(
    name = "pg_query_generated_test",
    srcs = [
        "Pg/Query/Generated.lean",
        "Pg/Query/GeneratedTest.lean",
    ],
    entry = "Pg/Query/GeneratedTest.lean",
    visibility = ["//visibility:public"],
)

# End-to-end trust-chain gate:
#
#   tools/pgpb_to_lean_ast/smoke_fixture.sql
#       ↓ //tools:sql_to_protobuf
#   smoke_fixture.pgpb
#       ↓ //tools/pgpb_to_lean_ast:pgpb_to_lean_ast
#   SmokeFixture.lean    (Pg.Query.SmokeFixture.parseResult)
#       ↓ lean_test
#   Kernel-checked Pg.Query.ParseResult value
#
# A break at any link surfaces here: malformed SQL → sql_to_protobuf
# fails; protobuf-c API drift → pgpb_to_lean_ast fails; encoding
# disagreement between pgpb_codegen and pgpb_to_lean_ast →
# Lean kernel rejects the decoder's output.
lean_test(
    name = "pg_query_decoder_smoke_test",
    srcs = [
        "Pg/Query/Generated.lean",
        "//tools/pgpb_to_lean_ast:SmokeFixture.lean",
    ],
    entry = "SmokeFixture.lean",
    visibility = ["//visibility:public"],
)

# Pg.Catalog.Fold — kernel-checked catalog projection over typed
# top-level DDL stmts. Phase 0 covers CreateSchemaStmt +
# CreateEnumStmt; FoldTest exercises both via inline TopParseResult
# values + native_decide assertions on the resulting Snapshot.
#
# This is the proof-tier ladder leg: the catalog projection moves
# from "trust the C tool" to "kernel-checked" once enough handlers
# accumulate to match pgpb_to_snapshot.c's coverage.
lean_test(
    name = "pg_catalog_fold_test",
    srcs = [
        "Pg/Catalog/Fold.lean",
        "Pg/Catalog/FoldTest.lean",
        "Pg/Catalog/Oid.lean",
        "Pg/Catalog/RegTypes.lean",
        "Pg/Catalog/Snapshot.lean",
        "Pg/Catalog/Tables.lean",
        "Pg/Query/Top.lean",
    ],
    entry = "Pg/Catalog/FoldTest.lean",
    visibility = ["//visibility:public"],
)

# End-to-end fold pipeline: .sql → .pgpb → typed .lean → fold →
# Snapshot. Consumes the same smoke_fixture as
# pg_query_decoder_smoke_test (which used opaque ByteArray); this
# variant takes the typed dispatch and runs it through the kernel-
# checked fold.
#
# Phase 0 asserts on the namespace count (CREATE SCHEMA is the only
# fully-typed stmt in the fixture); Phase 1+ asserts tighten as the
# fold's coverage grows to match pgpb_to_snapshot.c.
lean_test(
    name = "pg_catalog_fold_pipeline_test",
    srcs = [
        "Pg/Catalog/Fold.lean",
        "Pg/Catalog/FoldPipelineTest.lean",
        "Pg/Catalog/Oid.lean",
        "Pg/Catalog/RegTypes.lean",
        "Pg/Catalog/Snapshot.lean",
        "Pg/Catalog/Tables.lean",
        "Pg/Query/Top.lean",
        "//tools/pgpb_to_lean_ast:SmokeFixtureTyped.lean",
    ],
    entry = "Pg/Catalog/FoldPipelineTest.lean",
    visibility = ["//visibility:public"],
)

# Pg.Catalog.SnapshotEmit printer smoke. Hand-builds a small
# Snapshot covering every row kind, runs Snapshot.toLeanSource,
# native_decide-asserts on well-known substrings of the output.
# When the lean_emit-backed pg_sql_catalog_library_lean macro
# lands, a full byte-equivalence diff_test against the C tool's
# output supersedes this.
lean_test(
    name = "pg_catalog_snapshot_emit_test",
    srcs = [
        "Pg/Catalog/Oid.lean",
        "Pg/Catalog/RegTypes.lean",
        "Pg/Catalog/Snapshot.lean",
        "Pg/Catalog/SnapshotEmit.lean",
        "Pg/Catalog/SnapshotEmitTest.lean",
        "Pg/Catalog/Tables.lean",
    ],
    entry = "Pg/Catalog/SnapshotEmitTest.lean",
    visibility = ["//visibility:public"],
)
