load("//tools/regen:cluster.bzl", "pg_ir_clusters")
load("//tools/regen:clusters.bzl", "CLUSTERS")

package(default_visibility = ["//visibility:public"])

# Single source of truth for every Pg.Ir cluster's Bazel targets.
# One centralized iteration over `CLUSTERS` generates everything for
# the 19 clusters. The hand-written oracle code lives flat under
# `rust/c_oracle/` (vendored real-PG bodies, renaming wrappers, FFI
# WRAP() expansions) and `rust/tests/` (Gate 2 diff_<base>.rs); the
# Lean-emitted Rust crate body comes from `//lean:<base>_rs_emit` at
# build time.
#
# Target naming (all under `//rust:`):
#   <crate>            rust_library (e.g. pg_int4_arith; srcs is the
#                      generated `//lean:<base>_rs_emit.rs`)
#   <crate>_c_oracle   cc_library wrapping c_oracle/{renamed_<base>.c,
#                      wrappers_<base>.c} + textual_hdr c_oracle/<base>.c
#   <diff_test>        rust_test (e.g. diff_int4_arith, Gate 2)
#   gate3_<base>       c_ast_struct_diff_test_suite over the Lean C
#   gate3_<base>_<fn>    emit (//lean:<base>_c_emit) vs real PG source
#
# `pg_fcinfo` and `pg_palloc` are foundation crates (not cluster-shaped)
# — they keep their own `rust/pg_fcinfo/BUILD.bazel` /
# `rust/pg_palloc/BUILD.bazel` packages.

pg_ir_clusters(clusters = CLUSTERS)
